--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: xlsx
 Type: Package
 Title: Read, write, format Excel 2007 (xlsx) files
-Version: 0.1.1
-Date: 2010-01-01
+Version: 0.1.3
+Date: 2010-03-15
 Depends: xlsxjars
 Imports: xlsxjars
 LazyLoad: yes
@@ -11,6 +11,6 @@ Maintainer: Adrian A. Dragulescu <adrian.dragulescu@gmail.com>
 Description: Provide R functions to read/write/format Excel 2007 (xlsx)
         file formats.
 License: GPL-3
-Packaged: 2010-01-02 15:20:52 UTC; home
+Packaged: 2010-03-17 14:36:12 UTC; e47187
 Repository: CRAN
-Date/Publication: 2010-01-03 11:43:07
+Date/Publication: 2010-03-17 15:06:56
