--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: xlsx
 Type: Package
 Title: Read, write, format Excel 2007 (xlsx) files
-Version: 0.1.3
-Date: 2010-03-15
+Version: 0.2.0
+Date: 2010-05-01
 Depends: xlsxjars
 Imports: xlsxjars
 LazyLoad: yes
@@ -11,6 +11,6 @@ Maintainer: Adrian A. Dragulescu <adrian.dragulescu@gmail.com>
 Description: Provide R functions to read/write/format Excel 2007 (xlsx)
         file formats.
 License: GPL-3
-Packaged: 2010-03-17 14:36:12 UTC; e47187
+Packaged: 2010-05-01 02:19:45 UTC; home
 Repository: CRAN
-Date/Publication: 2010-03-17 15:06:56
+Date/Publication: 2010-05-01 16:00:27
