--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: xlsx
 Type: Package
 Title: Read, write, format Excel 2007 and Excel 97/2000/XP/2003 files
-Version: 0.3.0
-Date: 2011-03-03
+Version: 0.4.0
+Date: 2012-01-15
 Depends: xlsxjars, rJava
 Imports: xlsxjars, rJava
 LazyLoad: yes
@@ -11,6 +11,7 @@ Maintainer: Adrian A. Dragulescu <adrian.dragulescu@gmail.com>
 Description: Provide R functions to read/write/format Excel 2007 and
         Excel 97/2000/XP/2003 file formats.
 License: GPL-3
-Packaged: 2011-03-02 19:27:04 UTC; e47187
+URL: http://code.google.com/p/rexcel/
+Packaged: 2012-01-14 21:45:13 UTC; adrian
 Repository: CRAN
-Date/Publication: 2011-03-03 06:54:56
+Date/Publication: 2012-01-15 12:02:26
