--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: xlsx
 Type: Package
 Title: Read, write, format Excel 2007 and Excel 97/2000/XP/2003 files
-Version: 0.5.0
-Date: 2012-09-23
+Version: 0.5.1
+Date: 2012-03-31
 Depends: xlsxjars, rJava
 Imports: xlsxjars, rJava
 LazyLoad: yes
@@ -12,6 +12,7 @@ Description: Provide R functions to read/write/format Excel 2007 and
         Excel 97/2000/XP/2003 file formats.
 License: GPL-3
 URL: http://code.google.com/p/rexcel/
-Packaged: 2012-09-26 04:32:47 UTC; ripley
+Packaged: 2013-05-20 22:18:52 UTC; adrian
+NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2012-09-26 04:35:03
+Date/Publication: 2013-05-21 00:32:32
